<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/marrom_escuro"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnCardapio"
        android:layout_width="148dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/marrom_claro"
        android:fontFamily="sans-serif-thin"
        android:onClick="onClickCardapio"
        android:text="@string/btnCardapio"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPedidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />

    <Button
        android:id="@+id/btnSobre"
        android:layout_width="148dp"
        android:layout_height="56dp"
        android:layout_marginBottom="116dp"
        android:backgroundTint="#734A34"
        android:fontFamily="sans-serif-thin"
        android:onClick="onClickSobre"
        android:text="@string/btnSobre"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnPedidos"
        android:layout_width="148dp"
        android:layout_height="56dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#734A34"
        android:fontFamily="sans-serif-thin"
        android:onClick="onClickPedidos"
        android:text="@string/btnPedido"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSobre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="84dp"
        android:layout_height="81dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.932"
        app:srcCompat="@mipmap/coffee_foreground" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:fontFamily="sans-serif-thin"
        android:foregroundTint="#000"
        android:text="@string/h1Cafeteria"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/titles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

</androidx.constraintlayout.widget.ConstraintLayout>