<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/marrom_escuro"
    tools:context=".CardapioActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="146dp"
        android:layout_height="28dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/labelTalheres"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="@dimen/textocardapio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="234dp"
        android:layout_height="27dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/labelEntrega"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="@dimen/textocardapio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextEndereco"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735" />

    <EditText
        android:id="@+id/editTextEndereco"
        android:layout_width="278dp"
        android:layout_height="41dp"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textSize="@dimen/textocardapio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/btnCardapio"
        android:textColor="@color/white"
        android:textSize="@dimen/titles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:onClick="onClickVoltar"
        android:src="@mipmap/back_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="71dp"
        android:layout_height="29dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/labelCafes"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/cardapiooptions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="242dp"
        android:layout_height="33dp"
        app:cardBackgroundColor="@color/yellow"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263">

        <Spinner
            android:id="@+id/spinnerCafes"
            android:layout_width="237dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/itensSpinnerCafes" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="242dp"
        android:layout_height="33dp"
        app:cardBackgroundColor="@color/yellow"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528">

        <Spinner
            android:id="@+id/spinnerDoces"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:entries="@array/itensSpinnerDoces" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="105dp"
        android:layout_height="32dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/labelDoces"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/cardapiooptions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466" />

    <androidx.cardview.widget.CardView
        android:layout_width="242dp"
        android:layout_height="33dp"
        app:cardBackgroundColor="@color/yellow"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398">

        <Spinner
            android:id="@+id/spinnerSalgados"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:entries="@array/itensSpinnerSalgados" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="105dp"
        android:layout_height="32dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/labelSalgados"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/cardapiooptions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34" />

    <Button
        android:id="@+id/btnPedir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/marrom_claro"
        android:fontFamily="sans-serif-thin"
        android:text="@string/btnPedir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

    <RadioGroup
        android:id="@+id/grupoRbtn"
        android:layout_width="113dp"
        android:layout_height="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.656">

        <RadioButton
            android:id="@+id/rbtnOp1"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:buttonTint="@color/white"
            android:fontFamily="sans-serif-thin"
            android:text="Sim"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbtnOp2"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:buttonTint="@color/white"
            android:fontFamily="sans-serif-thin"
            android:text="Não"
            android:textColor="@color/white" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>